[package]
name = "async-hierarchical-fsm"
version = "0.1.0"
edition = "2024"
authors = ["Raw Robot"]
license = "MIT OR Apache-2.0"
description = "A powerful async hierarchical finite state machine with timeout support"
homepage = "https://github.com/rawrobot/async-hierarchical-fsm"
repository = "https://github.com/rawrobot/async-hierarchical-fsm"
#documentation = "https://docs.rs/async-hierarchical-fsm"
readme = "README.md"
keywords = ["async", "state-machine", "fsm", "hierarchical", "tokio"]
categories = ["asynchronous", "data-structures", "development-tools"]
exclude = [
    "/.github/*",
    "/scripts/*",
    "*.png",
    "*.jpg"
]

[dependencies]
async-trait = "0.1.74"
tokio = { version = "1.0", features = ["time"], optional = true }
thiserror = "2.0.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
crossterm = "0.27"

[features]
tokio-integration = ["tokio"]

[[example]]
name = "basic_device"
required-features = ["tokio-integration"]

[[example]]
name = "hierarchical_ui"
required-features = ["tokio-integration"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]